--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -2,7 +2,9 @@
   <% commentable.comments.each do |comment| %>
     <li>
       <%= comment.title %> </br>
-      <%= comment.message %>
+      <%= comment.message %></br>
+		<%= link_to 'Destroy Comment', [comment.post, comment], method: :delete, data: { confirm: 'Are you sure?' } %>
     </li>
   <% end %>
 </ul>
+
