--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,4 +4,37 @@
   <%= post.body %>
 </p>
 
+<% if current_user == post.user %>
+
+  <span>
+    <%= link_to 'Edit Post', edit_post_path(post) %> |
+  </span>
+
+  <span>
+    <%= link_to 'Delete Post', post_path(post),
+      method: :delete, data: {confirm: 'Are you sure?'} %> |
+  </span>
+
+<% end %>
+
+<span>
+    <%= link_to 'Back', posts_path %>
+</span>
+
+<h2>Comments</h2>
 <%= render "comments", commentable: post %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= f.label :message %><br>
+    <%= f.text_area :message %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
