--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,5 @@
+<style type="text/css"></style>
+<div id = "centerLayer">
 <%= form_for @post do |f| %>
   <p>
     <%= f.label :title %> </br>
@@ -14,3 +16,4 @@
   </p> 
 
 <% end %>
+</div>
