--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
+<head>
+<style type="text/css"></style>
+ </head>
+
+<div id = "centerLayer">
 <h1>Posts List</h1>
 
 <ul>
@@ -13,3 +18,4 @@
 </ul>
 
 <%= link_to 'New Post', new_post_path %>
+</div>
