--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
+<style type="text/css"></style>
+<div id = "centerLayer">
 <h1> <%= post.title %> </h1>
-
 <p>
   <%= post.body %>
 </p>
@@ -38,3 +39,4 @@
     <%= f.submit %>
   </p>
 <% end %>
+</div>
