--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+ #centerLayer {
+    position: absolute; 
+    width: 580px;
+    left: 40%;
+    top: 20%;
+    margin-left: -150px;
+    margin-top: -100px; 
+    padding: 10px;
+    overflow: auto;
+   }
+
+#center {
+    position: absolute; 
+    width: 580px;
+    left: 40%;
+    top: 3%;
+    margin-left: -150px;
+    padding: 10px;
+
+   }
