--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <style type="text/css"></style>
 </head>
 <body>
-
+<div id = "center">
 <%= flash[:notice] %>
 
 <% if user_signed_in? %>
@@ -16,7 +17,8 @@
 <% else %>
     <%= link_to 'Sign In', new_user_session_path %> or <%= link_to 'Sign Up', new_user_registration_path %>
 <% end %>
+</div>
 <%= yield %>
-
 </body>
+
 </html>
